--- a/docs/css/components.css
+++ b/docs/css/components.css
@@ -10,6 +10,27 @@
     z-index: 1;
 }
 
+.sidebar-components .mdl-list__item {
+    margin-left: 8px;
+    display: block;
+    padding: 0;
+}
+.sidebar-components .mdl-list__item:hover {
+    background: #fafafa;
+}
+
+.sidebar-components a {
+    color: #000;
+    text-decoration: none;
+    padding: 16px;
+    display: block;
+}
+
+.sidebar-components a {
+    color: #000;
+    text-decoration: none;
+}
+
 .markdown {
     padding: 8px;
     margin: 8px;
