updates docs index and components pages

--- a/docs/css/components.css
+++ b/docs/css/components.css
@@ -1,3 +1,12 @@
+img[alt="react logo"] {
+    width: 175px;
+    height: 175px;
+}
+
+.center {
+    text-align: center;
+}
+
 .sidebar-components {
     display: inline-block;
     background: #fff;
