--- a/components/textfield/index.html
+++ b/components/textfield/index.html
@@ -232,7 +232,7 @@
 <tr>
 <td style="text-align:left">value</td>
 <td style="text-align:left">String or Number</td>
-<td style="text-align:left">Definest the ‘current’ value</td>
+<td style="text-align:left">Defines the ‘current’ value</td>
 <td style="text-align:left">Optional</td>
 </tr>
 </tbody>
